--- a/src/index.html
+++ b/src/index.html
@@ -1,19 +1,15 @@
 <!DOCTYPE html>
-<html>
+<html lang="en-US">
 <head>
-  <title>Shape Tracker</title>
+  <title>Crypto-currency API</title>
 </head>
 <body>
-  <h3>Enter three lengths to determine if they can make a triangle.</h3>
-  <form id="triangle-checker-form">
-    <label for="length1">Enter a number:</label>
-    <input id="length1" type="number">
-    <label for="length2">Enter a number:</label>
-    <input id="length2" type="number">
-    <label for="length3">Enter a number:</label>
-    <input id="length3" type="number">
+  <form id="crypto-input-form">
+    <label for="uIn">Enter the three-letter identifier of the cryptocurrency you want to display:</label>
+    <input id="uIn1" type="text">
     <button type="submit">Submit</button>
   </form>
+  <img width="100px" id="image">
   <div id="response"></div>
 </body>
 </html>
