--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
   <div class="container">
     <form class="center" id="crypto-input-form">
       <h2>Crypto-currency API</h2>
-      <label for="uIn">Enter the three-letter identifier of the cryptocurrency you want to display:</label><br>
+      <label for="uIn1">Enter the three-letter identifier of the cryptocurrency you want to display:</label><br>
       <pre>BTC (Bitcoin), ETH (Ethereum Classic), XRP (Ripple), USDT(Tether), USDC(USD Coin),
       BNB (Binance Coin), BUSD (Binance USD), SOL (Solana), HEX</pre>
       <input id="uIn1" type="text">
@@ -17,8 +17,17 @@
     </form>
     <div class="center">
       <img width="100px" id="image">
-      <div id="response"></div>
+      <div id="responseContent"></div>
     </div>
+
+      <div class="hidden" id="response">
+        <form id="exchange-input-form" class="center">
+          <h4>Check out the exchange value of this crypto-currency in traditional currencies!</h4>
+          <label for="uIn2">Enter the three-letter identifier of the currency in which you want the value of your crypto:</label><br>
+          <input id="uIn2" type="text">
+          <button type="submit">Submit</button>
+        </form>
+      </div>
   </div>
 </body>
 
