Confirm that printElement() returns the crypto currency price

--- a/src/index.html
+++ b/src/index.html
@@ -22,10 +22,11 @@
 
       <div class="hidden" id="response">
         <form id="exchange-input-form" class="center">
-          <h4>Check out the exchange value of this crypto-currency in traditional currencies!</h4>
+          <h4>Check out the value of this crypto-currency in traditional currencies!</h4>
           <label for="uIn2">Enter the three-letter identifier of the currency in which you want the value of your crypto:</label><br>
           <input id="uIn2" type="text">
           <button type="submit">Submit</button>
+          <div id="exchange-response" style="margin-top: 10px;"></div>
         </form>
       </div>
   </div>
