--- a/src/index.html
+++ b/src/index.html
@@ -17,9 +17,10 @@
     </form>
     <div class="center">
       <img width="100px" id="image">
+      <div id="cryptoPrice"></div>
       <div id="responseContent"></div>
     </div>
-
+    <div class="hidden" id="cryptoPrice" type="number"></div>
       <div class="hidden" id="response">
         <form id="exchange-input-form" class="center">
           <h4>Check out the value of this crypto-currency in traditional currencies!</h4>
