--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,7 @@
     </form>
     <div class="center">
       <img width="100px" id="image">
-      <div id="cryptoPrice"></div>
+      <div id="cryptoPrice" class="hidden"></div>
       <div id="responseContent"></div>
     </div>
     <div class="hidden" id="cryptoPrice" type="number"></div>
@@ -25,6 +25,8 @@
         <form id="exchange-input-form" class="center">
           <h4>Check out the value of this crypto-currency in traditional currencies!</h4>
           <label for="uIn2">Enter the three-letter identifier of the currency in which you want the value of your crypto:</label><br>
+          <pre>EUR (Euro), AUD (Australian Dollar), GBP (Great Britain Pound), JPY(Japan Yen), CHF(Switzerland Franc),
+            ILS (Israel New Shekel), RUB (Russia Rouble), KRW (South Korea Won), China Yuan/Renminbi (CNY)</pre>
           <input id="uIn2" type="text">
           <button type="submit">Submit</button>
           <div id="exchange-response" style="margin-top: 10px;"></div>
